--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
-title: Yaoyao Liu
+title: Qiushi Li / 李秋实
 position: Postdoctoral Fellow
-affiliation: Johns Hopkins University
+affiliation: Tsinghua University
 affiliation_link: https://cs.jhu.edu/
 affiliation_logo: ./assets/img/university-logo-small-horizontal-white-156eae9527.svg
 email: yliu538 (at) jhu.edu
