--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 title: Qiushi Li / 李秋实
 position: Postdoctoral Fellow
 affiliation: Tsinghua University
-affiliation_link: https://cs.jhu.edu/
-affiliation_logo: ./assets/img/university-logo-small-horizontal-white-156eae9527.svg
-email: yliu538 (at) jhu.edu
+# affiliation_link: https://www.tsinghua.edu.cn/
+# affiliation_logo: ./assets/img/thu-name-crest-white.svg
+email: lqs (at) tsinghua.edu.cn
 
 # Search Engine Optimization (SEO)
-keywords: yaoyao liu, liu yaoyao, yaoyaoliu, liuyaoyao
-canonical: https://www.cs.jhu.edu/~yyliu/
-description: Yaoyao Liu is a postdoctoral fellow at Johns Hopkins University. His research lies in meta-learning, incremental learning, and image generation.
+keywords: qiushi li, 李秋实, li qiushi, qiushili, liqiushi
+canonical: https://liqiushi.fyi/
+description: Qiushi Li (李秋实 in Chinese) is a postdoctoral fellow at Tsinghua University (清华大学 in Chinese). His research lies in privacy-preserving machine learning and confidential computation.
 
 # The option is used to enable the Johns Hopkins template.
 enable_hopkins_logo: true
@@ -18,25 +18,26 @@ enable_hopkins_logo: true
 enable_last_update: false
 
 # Links
-google_scholar: https://scholar.google.com/citations?user=Uf9GqRsAAAAJ
-cv_link: https://pages.jh.edu/yliu538/files/Yaoyao_Liu_Curriculum_Vitae.pdf
-github_link: https://github.com/yaoyao-liu/
-linkedin: https://www.linkedin.com/in/liuyaoyao/
-twitter: https://twitter.com/YaoyaoLiu1/
+google_scholar: https://scholar.google.com/citations?user=qyaYAcsAAAAJ
+# cv_link: https://pages.jh.edu/yliu538/files/Yaoyao_Liu_Curriculum_Vitae.pdf
+# github_link: https://github.com/yaoyao-liu/
+# linkedin: https://www.linkedin.com/in/liuyaoyao/
+# twitter: https://twitter.com/YaoyaoLiu1/
 
 # Images 
-avatar: https://img.yliu.me/avatar.jpg
-favicon: ./assets/img/favicon.png
-favicon_dark: ./assets/img/favicon-dark.png
+# avatar: https://img.yliu.me/avatar.jpg
+# favicon: ./assets/img/thu-crest.svg
+# favicon_dark: ./assets/img/thu-crest-white.svg
 
 # Footnotes
-footnote: Feel free to use my website's source code.
+footnote: Thanks for Yaoyao's academic homepage template.
 footnote_link: https://github.com/yaoyao-liu/minimal-light
 
 # Analytics
 # Please remove the following lines about analytics services if you fork my project. 
 # Otherwise, the analytics information of your website will be recorded to my ClustrMaps accounts.
-clustrmaps_id: l3lesztPwCz-uXlzFI1Lt9SB3Ctz-pBQuMdYqnD0Ul8
+# clustrmaps_id: l3lesztPwCz-uXlzFI1Lt9SB3Ctz-pBQuMdYqnD0Ul8
+google_analytics: G-KRFENLZ8HT
 
 # The following files will be removed from the generated website.
 exclude:
