--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,10 +7,7 @@ main:
   - title: "Services"
     url: ./#services
 
-  - title: "Talks"
-    url: ./#invited-talks
-
-  - title: "Funding"
+  - title: "Funding / Awards"
     url: ./#funding
 
   - title: "Publications"
