--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Qiushi Li / 李秋实
-position: Postdoctoral Fellow
+position: Postdoctoral Fellow (博士后研究员)
 affiliation: Tsinghua University
 # affiliation_link: https://www.tsinghua.edu.cn/
 # affiliation_logo: ./assets/img/thu-name-crest-white.svg
@@ -9,7 +9,7 @@ affiliation_logo: ./assets/img/university-logo-small-horizontal-white-156eae9527
 email: lqs (at) tsinghua.edu.cn
 
 # Search Engine Optimization (SEO)
-keywords: qiushi li, 李秋实, li qiushi, qiushili, liqiushi
+keywords: qiushi li, 李秋实, 清华, tsinghua, 清华大学, tsinghua university, li qiushi, qiushili, liqiushi
 canonical: https://liqiushi.fyi/
 description: Qiushi Li (李秋实 in Chinese) is a postdoctoral fellow at Tsinghua University (清华大学 in Chinese). His research lies in privacy-preserving machine learning and confidential computation.
 
