--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Qiushi Li / 李秋实
 position: Postdoctoral Fellow (博士后研究员)
-affiliation: Tsinghua University
+affiliation: Tsinghua University (清华大学)
 # affiliation_link: https://www.tsinghua.edu.cn/
 # affiliation_logo: ./assets/img/thu-name-crest-white.svg
 affiliation_link: https://www.tsinghua.edu.cn/
