--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Qiushi Li / 李秋实
-position: Postdoctoral Fellow<br>博士后研究员
+position: Postdoctoral Fellow<br>博士后, 助理研究员
 affiliation: Tsinghua University<br>清华大学
 # affiliation_link: https://www.tsinghua.edu.cn/
 # affiliation_logo: ./assets/img/thu-name-crest-white.svg
