--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -99,5 +99,5 @@ main:
     authors: <u>Yaoxian Li, Xin Dong, <strong>Qiushi Li</strong> (co-first author)</u>, Ting Li
     conference_short: INEC
     conference: IEEE International Nanoelectronics Conference (INEC) 2016.
-    link: https://dl.acm.org/doi/abs/10.1145/3123266.3123357
+    link: https://ieeexplore.ieee.org/abstract/document/7589462
     image: ./assets/img/inec2016.png
