--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 # Basic Information 
 title: Qiushi Li / 李秋实
+title_chs: 李秋实
+title_en: Qiushi Li
+lang: zh-CN
 position: Postdoctoral Fellow<br>博士后, 助理研究员
 affiliation: Tsinghua University<br>清华大学
 # affiliation_link: https://www.tsinghua.edu.cn/
@@ -9,7 +12,7 @@ affiliation_logo: ./assets/img/university-logo-small-horizontal-white-156eae9527
 email: lqs (at) tsinghua.edu.cn
 
 # Search Engine Optimization (SEO)
-keywords: qiushi li, 李秋实, 清华, tsinghua, 清华大学, tsinghua university, li qiushi, qiushili, liqiushi
+keywords: qiushi li, 李秋实, 主页, homepage, 清华, tsinghua, 清华大学, tsinghua university, li qiushi, qiushili, liqiushi
 canonical: https://liqiushi.fyi/
 description: Qiushi Li (李秋实 in Chinese) is a postdoctoral fellow at Tsinghua University (清华大学 in Chinese). His research lies in privacy-preserving machine learning and confidential computation.
 
