--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Qiushi Li / 李秋实
 title_chs: 李秋实
 title_en: Qiushi Li
 lang: zh-CN
-position: Postdoctoral Fellow<br>博士后, 助理研究员
+position: Postdoctoral Fellow<br>博士后
 affiliation: Tsinghua University<br>清华大学
 # affiliation_link: https://www.tsinghua.edu.cn/
 # affiliation_logo: ./assets/img/thu-name-crest-white.svg
